--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tailwindcss build src/styles.css -o public/styles.css",
-    "production": "cross-env NODE_ENV=production postcss css/tailwind.css -o build/tailwind.css"
+    "production": "cross-env NODE_ENV=production postcss src/styles.css -o public/styles.css"
   },
   "repository": {
     "type": "git",
@@ -19,9 +19,13 @@
   },
   "homepage": "https://github.com/gegabo/georgdiez.github.io#readme",
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^3.1.3",
     "autoprefixer": "^10.2.4",
+    "cross-env": "^7.0.3",
+    "cssnano": "^4.1.10",
     "jquery": "^3.5.1",
     "postcss": "^8.2.6",
+    "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.0.3",
     "vuetrend": "^0.3.4"
   }
