--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "## Dependencies - npm - tailwindcss - postcss-cli - autoprefixer - cross-env - @fullhuman/postcss-purgecss - cssnano - slick-carousel",
   "main": "index.js",
   "scripts": {
-    "build": "tailwindcss build src/styles.css -o public/styles.css",
-    "production": "cross-env NODE_ENV=production postcss src/styles.css -o public/styles.css"
+    "build": "tailwindcss build src/styles.css -o docs/styles.css",
+    "production": "cross-env NODE_ENV=production postcss src/styles.css -o docs/styles.css"
   },
   "repository": {
     "type": "git",
