--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "homepage": "https://github.com/gegabo/georgdiez.github.io#readme",
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^3.1.3",
     "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
     "cssnano": "^6.0.0",
@@ -28,5 +27,9 @@
     "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.2.19",
     "vuetrend": "^0.3.4"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^5.0.0",
+    "purgecss": "^5.0.0"
   }
 }
